# grpc-wrapper

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
ci/: build_and_run.sh  install_deps.sh
cmake/: ClangTidy.cmake  CreateProtoLibrary.cmake  FindProtobuf.cmake  FindgRPC.cmake  ThirdParty.cmake
example/: CMakeLists.txt
example/protos/: example.proto
example/protos/chat/: chat_room.proto  message.proto  user.proto
example/protos/util/: util.proto
example/src/: example_client.cpp  example_client.hpp  example_server.cpp  example_server.hpp  new_arch_client.cpp  new_arch_client.hpp  new_arch_server.cpp  new_arch_test.cpp  tag.cpp  tag.hpp
example/src/client/: client.hpp  new_arch_client.cpp  new_arch_client.hpp  unary_rpc_handler.hpp
example/src/server/: async_server.hpp  connections.hpp  new_arch_server.cpp  new_arch_server.hpp  rpc.hpp  server_stream_rpc_handler.hpp  unary_rpc_handler.hpp
example/src/shared/: tag.cpp  tag.hpp  tagger.cpp  tagger.hpp
include/grpcw/: forward_declarations.hpp  grpc_async_server.hpp  grpc_client.hpp  grpc_client_state.hpp  grpc_client_stream.hpp  grpc_server.hpp
include/grpcw/client/: grpc_client.hpp  grpc_client_stream.hpp
include/grpcw/detail/: async_rpc_handler_interface.hpp  atomic_data.hpp  non_stream_rpc_handler.hpp  stream_rpc_handler.hpp  tag.hpp
include/grpcw/server/: grpc_async_server.hpp  grpc_server.hpp  scoped_grpc_server.hpp
include/grpcw/server/detail/: async_rpc_handler_interface.hpp  non_stream_rpc_handler.hpp  stream_rpc_handler.hpp  stream_rpc_handler_callback_setter.hpp  tag.hpp
include/grpcw/util/: atomic_data.hpp  blocking_queue.hpp  make_unique.hpp
ltb-util/: CMakeLists.txt
ltb-util/cmake/: LtbAddLibrary.cmake
protos/: CMakeLists.txt
protos/testing/: testing.proto
src/: paths.hpp.in
src/grpcw/: grpc_server.cpp
src/grpcw/client/: grpc_client.cpp
src/grpcw/detail/: tag.cpp
src/grpcw/server/: grpc_server.cpp  scoped_grpc_server.cpp
src/grpcw/server/detail/: tag.cpp
src/testing/: agw_tests.cpp  test_proto_util.cpp  test_proto_util.hpp  test_server.cpp  test_server.hpp  test_service.cpp  test_service.hpp
src/testing/grpcw/: grpc_client_state.cpp  grpc_client_tests.cpp  grpc_server_tests.cpp
src/testing/grpcw/client/: grpc_client_state_tests.cpp  grpc_client_tests.cpp
src/testing/grpcw/server/: grpc_server_tests.cpp
src/testing/util/: atomic_data_tests.cpp  blocking_queue_tests.cpp  test_proto_util.hpp  test_server.cpp  test_server.hpp  test_service.cpp  test_service.hpp
